[B]Version 1.1.78[/B]
awmnet - fix regex
ipv - removed dead site