@@ -1,3 +1,4 @@
 [B]Version 1.1.78[/B]
 awmnet - fix regex
 ipv - removed dead site
+ividz - fix listing, categories
